outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-8638125807035617000_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later) with adaptive weights that adjust based on remaining nodes, combining their contributions into a weighted score to select the next node, ensuring a smooth transition from exploration to exploitation.}
                    ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later) with adaptive weights that adjust based on remaining nodes, combining their contributions into a weighted score to select the next node, ensuring a smooth transition from exploration to exploitation.}
                    ^
SyntaxError: unmatched ')'
